StyledLink: Added borderColor prop, and fixed text size on mobile
Added more HexColor variables

--- a/src/CSS/StyledLink.css
+++ b/src/CSS/StyledLink.css
@@ -2,9 +2,14 @@
     background-color: black;
     border-radius: 10px;
     padding: 10px;
-    min-width: 10vw;
 }
 
 .LinkButton:hover {
     cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) {
+    .LinkButton {
+        font-size: 1.5rem !important;
+    }
 }
